Correct align footer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,7 @@ p {
   color: white;
   font-size: 11px;
   background-color: dimgray;
+  text-align: left;
 }
 
 .nav {
